Fix budget view displaying all account types

In the Budgets view all account types, including Asset, Liability, and
Equity, were displayed.

This commit solves the issue so that only Income and Exponse catergories
are displayed in the Budgets view.

BUG: 422196
Signed-off-by: Robert Szczesiak <dev.rszczesiak@gmail.com>